made html hotels

--- a/templates/hotels.html
+++ b/templates/hotels.html
@@ -6,14 +6,87 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Booking</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        .hotel-container {
+            display: flex;
+            flex-wrap: wrap;
+            background: white;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            position: relative; /* Для позиционирования цены */
+        }
+        .hotel-header, .hotel-body {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            flex: 1 1 100%;
+        }
+        .hotel-header h2, .hotel-header h1, .hotel-body h2, .hotel-body h1 {
+            margin: 0 10px 0 0;
+        }
+        .hotel-body img {
+            margin: 10px 20px 10px 0;
+            border-radius: 8px;
+        }
+        .hotel-description, .hotel-services {
+            margin: 0 10px 10px 0;
+        }
+        .hotel-stars {
+            margin-right: 20px;
+        }
+        .hotel-footer {
+            position: absolute;
+            bottom: 20px; /* Расположить от нижнего края контейнера */
+            right: 20px; /* Расположить от правого края контейнера */
+        }
+        .hotel-footer h1 {
+            margin: 0;
+            font-size: 1.3em;
+            color: green;
+        }
+    </style>
 </head>
 <body>
 {% for hotel in hotels %}
-<div style="display:flex; margin-bottom: 15px; margin-left: 75px;">
-    <h1>{{hotel.name}}</h1>
-    <h4>{{hotel.location}}</h4>
-    <h4>{{hotel.services}}</h4>
-    <img src="{{ url_for('static', path='images/' + hotel.image_id|string + '.webp') }}" alt="Photo of hotel" width="300">
+<div class="hotel-container">
+    <div class="hotel-header">
+        <h2>{{ hotel.location }}</h2>
+        <pre>   </pre>
+        <h1>{{ hotel.name }}</h1><h2 class="hotel-stars">{{ hotel.stars }}*</h2>
+    </div>
+    <div class="hotel-body">
+        <img src="{{ url_for('static', path='images/' + hotel.hotel_image_id|string + '.webp') }}" alt="Photo of hotel" width="400">
+        <div class="hotel-description">
+            <h2>{{ hotel.description }}</h2>
+        </div>
+        <pre>      </pre>
+        <div class="hotel-services">
+            <h2>{{ hotel.hotel_services }}</h2>
+        </div>
+
+    </div>
+    <h1>Номер {{ hotel.rooms_name }}</h1>
+    <div class="hotel-body">
+        <img src="{{ url_for('static', path='images/' + hotel.room_image_id|string + '.webp') }}" alt="Photo of room" width="400">
+        <div class="hotel-description">
+            <h2>{{ hotel.rooms_description }}</h2>
+        </div>
+        <pre>      </pre>
+        <div class="hotel-services">
+            <h2>{{ hotel.room_services }}</h2>
+        </div>
+    </div>
+    <div class="hotel-footer">
+        <h1>{{ hotel.price }} рублей / ночь</h1>
+    </div>
 </div>
 {% endfor %}
 </body>
