--- a/templates/hotels.html
+++ b/templates/hotels.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Booking</title>
+    <title>Hotels</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -92,9 +92,11 @@
     <div class="hotel-header">
         <h2>{{ hotel.location }}</h2>
         <pre>   </pre>
+
         <a href="/hotels/{{ hotel.hotel_id }}?date_from={{ date_from }}&date_to={{ date_to }}">
             <h1>{{ hotel.name }}</h1>
-        </a><h2 class="hotel-stars">{{ hotel.stars }}*</h2>
+        </a>
+        <h2 class="hotel-stars">{{ hotel.stars }}*</h2>
     </div>
     <div class="hotel-body">
         <img src="{{ url_for('static', path='images/' + hotel.hotel_image_id|string + '.webp') }}" alt="Photo of hotel" width="400">
@@ -106,7 +108,9 @@
             <h2>{{ hotel.hotel_services }}</h2>
         </div>
     </div>
-    <h1>Номер {{ hotel.rooms_name }}</h1>
+     <a href="/rooms/{{ hotel.room_id }}?date_from={{ date_from }}&date_to={{ date_to }}">
+            <h1>{{ hotel.rooms_name }}</h1>
+        </a>
     <div class="hotel-body">
         <img src="{{ url_for('static', path='images/' + hotel.room_image_id|string + '.webp') }}" alt="Photo of room" width="400">
         <div class="hotel-description">
