--- a/templates/index.html
+++ b/templates/index.html
@@ -313,7 +313,7 @@
             document.getElementById("loginModal").style.display = "none";
             updateAuthState();
         } else {
-            alert("Неправильный email или пароль!");
+            alert("Ошибка входа");
         }
     });
 
